# Cosmos

./: .gitignore  README.md  pyproject.toml  repositories.json  tasks.py
cosmos/: cosmos_main.py  tasks.py
