[tool.poetry]
name = "cosmos"
version = "0.1.0"
description = "Cosmos project"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
pytest = "^7.4.0"
invoke = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
